prueba modif alt en img

--- a/Intro.html/index.html
+++ b/Intro.html/index.html
@@ -19,7 +19,7 @@
     </nav>
     <main id="main">
 <section class="logo">
-    <img src="../Intro.html/Recursos gr/GROWFINAL.svg">
+    <img src="../Intro.html/Recursos gr/GROWFINAL.svg" alt="Logo">
 </section>
 <header class="l1">
     <h1> Desarrollo Web </h1> 
