2correccion de rutas

--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
 <body>
 <div id="conten">
     <nav id="nave">
-            <a href="../Intro.html/index.html" id="nav">Home</a>
-            <a href="../Intro.html/Navegacion/Servicios.html" id="nav">Servicios</a>
-            <a href="../Intro.html/Navegacion/QuienesSomos.html" id="nav">Quienes Somos</a>
-            <a href="../Intro.html/Navegacion/NuestroTrabajo.html" id="nav">Nuestro Trabajo</a>
-            <a href="../Intro.html/Navegacion/Contacto.html" id="nav">Contacto</a>
+            <a href="../Repositorio/index.html" id="nav">Home</a>
+            <a href="../Repositorio/Navegacion/Servicios.html" id="nav">Servicios</a>
+            <a href="../Repositorio/Navegacion/QuienesSomos.html" id="nav">Quienes Somos</a>
+            <a href="../Repositorio/Navegacion/NuestroTrabajo.html" id="nav">Nuestro Trabajo</a>
+            <a href="../Repositorio/Navegacion/Contacto.html" id="nav">Contacto</a>
     </nav>
     <main id="main">
 <section class="logo">
-    <img src="../Intro.html/Recursos gr/GROWFINAL.svg" alt="Logo">
+    <img src="../Repositorio/Recursos gr/GROWFINAL.svg" alt="Logo">
 </section>
 <header class="l1">
     <h1> Desarrollo Web </h1> 
@@ -31,7 +31,7 @@
 <div class="sec1">  
     <h2> Nuestro enfoque</h2> 
 <section>
-    <img class="ilus2" src="../Intro.html/Recursos gr/ilust2.svg" alt="ilustraciones diseño">
+    <img class="ilus2" src="../Repositorio/Recursos gr/ilust2.svg" alt="ilustraciones diseño">
 </section>
 <section class="ilusmar">
     <article class="ilust">    
