--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
 </div>
     <footer id="pie">
         <div class="fut">
-        <a href="" class="futa"> <img src="../Intro.html/Recursos gr/IGICON.png" alt="IG" class="imgfut"></a> 
-        <a href="" class="futa"> <img src="../Intro.html/Recursos gr/TWICON.png" alt="TW" class="imgfut"></a> 
-        <a href="" class="futa"> <img src="../Intro.html/Recursos gr/LINKICON.png" alt="LINK" class="imgfut"></a> 
-        <a href="" class="futa"> <img src="../Intro.html/Recursos gr/WPICON.png" alt="WPP" class="imgfut"></a>
+        <a href="" class="futa"> <img src="../Repositorio/Recursos gr/IGICON.png" alt="IG" class="imgfut"></a> 
+        <a href="" class="futa"> <img src="../Repositorio/Recursos gr/TWICON.png" alt="TW" class="imgfut"></a> 
+        <a href="" class="futa"> <img src="../Repositorio/Recursos gr/LINKICON.png" alt="LINK" class="imgfut"></a> 
+        <a href="" class="futa"> <img src="../Repositorio/Recursos gr/WPICON.png" alt="WPP" class="imgfut"></a>
         </div>
         <h4 class="rih"> © Groweb | Todos los derechos reservados </h4>
     </footer>
