correcciones en el foot2

--- a/Navegacion/NuestroTrabajo.html
+++ b/Navegacion/NuestroTrabajo.html
@@ -43,10 +43,10 @@
 </main>
 <footer id="pie">
     <div class="fut">
-    <a href="" class="futa"> <img src="../Repositorio/Recursos gr/IGICON.png" alt="IG" class="imgfut"></a> 
-    <a href="" class="futa"> <img src="../Repositorio/Recursos gr/TWICON.png" alt="TW" class="imgfut"></a> 
-    <a href="" class="futa"> <img src="../Repositorio/Recursos gr/LINKICON.png" alt="LINK" class="imgfut"></a> 
-    <a href="" class="futa"> <img src="../Repositorio/Recursos gr/WPICON.png" alt="WPP" class="imgfut"></a>
+    <a href="" class="futa"> <img src="../Recursos gr/IGICON.png" alt="IG" class="imgfut"></a> 
+    <a href="" class="futa"> <img src="../Recursos gr/TWICON.png" alt="TW" class="imgfut"></a> 
+    <a href="" class="futa"> <img src="../Recursos gr/LINKICON.png" alt="LINK" class="imgfut"></a> 
+    <a href="" class="futa"> <img src="../Recursos gr/WPICON.png" alt="WPP" class="imgfut"></a>
     </div>
     <h4 class="rih"> © Groweb | Todos los derechos reservados </h4>
 </footer>
