correcciones de ruta

--- a/Navegacion/QuienesSomos.html
+++ b/Navegacion/QuienesSomos.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quienes somos | Groweb | Desarrollamos tu web</title>
     <link rel="stylesheet" href="../style.css">
-    <link rel="shortcut icon" href="../Recursos gr/GROWEB---TAB.jpg">
+    <link rel="shortcut icon" href="../recursos/logofinal.svg">
 </head>
 <body>
     <div id="conten">
@@ -22,10 +22,10 @@
 </main>
 <footer id="pie">
     <div class="fut">
-    <a href="" class="futa"> <img src="../Recursos gr/IGICON.png" alt="IG" class="imgfut"></a> 
-    <a href="" class="futa"> <img src="../Recursos gr/TWICON.png" alt="TW" class="imgfut"></a> 
-    <a href="" class="futa"> <img src="../Recursos gr/LINKICON.png" alt="LINK" class="imgfut"></a> 
-    <a href="" class="futa"> <img src="../Recursos gr/WPICON.png" alt="WPP" class="imgfut"></a>
+    <a href="" class="futa"> <img src="../recursos/igicon.png ." alt="IG" class="imgfut"></a> 
+    <a href="" class="futa"> <img src="../recursos/twicon.png ." alt="TW" class="imgfut"></a> 
+    <a href="" class="futa"> <img src="../recursos/licon.png ." alt="LINK" class="imgfut"></a> 
+    <a href="" class="futa"> <img src="../recursos/wpicon.png" alt="WPP" class="imgfut"></a>
     </div>
     <h4 class="rih"> © Groweb | Todos los derechos reservados </h4>
 </footer>
