--- a/index.html
+++ b/index.html
@@ -6,20 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Groweb | Desarrollamos tu web</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="../Intro.html/Recursos gr/GROWEB---TAB.jpg">
+    <link rel="shortcut icon" href="../Repositorio/recursos/logofinal.svg">
 </head>
 <body>
 <div id="conten">
     <nav id="nave">
             <a href="../Repositorio/index.html" id="nav">Home</a>
-            <a href="../Repositorio/Navegacion/Servicios.html" id="nav">Servicios</a>
-            <a href="../Repositorio/Navegacion/QuienesSomos.html" id="nav">Quienes Somos</a>
-            <a href="../Repositorio/Navegacion/NuestroTrabajo.html" id="nav">Nuestro Trabajo</a>
-            <a href="../Repositorio/Navegacion/Contacto.html" id="nav">Contacto</a>
+            <a href="../Repositorio/navegacion/servicios.html" id="nav">Servicios</a>
+            <a href="../Repositorio/Navegacion/quienesSomos.html" id="nav">Quienes Somos</a>
+            <a href="../Repositorio/Navegacion/nuestroTrabajo.html" id="nav">Nuestro Trabajo</a>
+            <a href="../Repositorio/Navegacion/contacto.html" id="nav">Contacto</a>
     </nav>
     <main id="main">
 <section class="logo">
-    <img src="../Repositorio/Recursos gr/GROWFINAL.svg" alt="Logo">
+    <img src="../Repositorio/recursos/logofinal.svg" alt="Logo">
 </section>
 <header class="l1">
     <h1> Desarrollo Web </h1> 
@@ -31,7 +31,7 @@
 <div class="sec1">  
     <h2> Nuestro enfoque</h2> 
 <section>
-    <img class="ilus2" src="../Repositorio/Recursos gr/ilust2.svg" alt="ilustraciones diseño">
+    <img class="ilus2" src="../Repositorio/recursos/ilust2.svg" alt="ilustraciones diseño">
 </section>
 <section class="ilusmar">
     <article class="ilust">    
@@ -54,14 +54,14 @@
 </div>
     </main>
     <div class="aside1">
-        <section class="fle"><img width="20px" src="../Intro.html/Recursos gr/flecha-hacia-abajo-para-navegar.svg" alt=""></section>
+        <section class="fle"><img width="20px" src="../Repositorio/recursos/flecha-hacia-abajo-para-navegar.svg" alt="desplazamiento"></section>
 </div>
     <footer id="pie">
         <div class="fut">
-        <a href="" class="futa"> <img src="../Repositorio/Recursos gr/IGICON.png" alt="IG" class="imgfut"></a> 
-        <a href="" class="futa"> <img src="../Repositorio/Recursos gr/TWICON.png" alt="TW" class="imgfut"></a> 
-        <a href="" class="futa"> <img src="../Repositorio/Recursos gr/LINKICON.png" alt="LINK" class="imgfut"></a> 
-        <a href="" class="futa"> <img src="../Repositorio/Recursos gr/WPICON.png" alt="WPP" class="imgfut"></a>
+        <a href="" class="futa"> <img src="../Repositorio/recursos/igicon.png" alt="IG" class="imgfut"></a> 
+        <a href="" class="futa"> <img src="../Repositorio/recursos/igicon.png" alt="TW" class="imgfut"></a> 
+        <a href="" class="futa"> <img src="../Repositorio/recursos/licon.png" alt="LINK" class="imgfut"></a> 
+        <a href="" class="futa"> <img src="../Repositorio/recursos/wpicon.png" alt="WPP" class="imgfut"></a>
         </div>
         <h4 class="rih"> © Groweb | Todos los derechos reservados </h4>
     </footer>
