--- a/Navegacion/Servicios.html
+++ b/Navegacion/Servicios.html
@@ -6,16 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Servicios | Groweb | Desarrollamos tu web</title>
     <link rel="stylesheet" href="../style.css">
-    <link rel="shortcut icon" href="../Recursos gr/GROWEB---TAB.jpg">
+    <link rel="shortcut icon" href="../recursos/logofinal.svg">
 </head>
 <body>
 <div id="conten">
 <nav id="nave">
         <a href="../index.html" id="nav">Home</a>
-        <a href="Servicios.html" id="nav">Servicios</a>
-        <a href="QuienesSomos.html" id="nav">Quienes Somos</a>
-        <a href="NuestroTrabajo.html" id="nav">Nuestro Trabajo</a>
-        <a href="Contacto.html" id="nav">Contacto</a>
+        <a href="../navegacion/servicios.html" id="nav">Servicios</a>
+        <a href="../navegacion/quienesSomos.html" id="nav">Quienes Somos</a>
+        <a href="../navegacion/nuestroTrabajo.html" id="nav">Nuestro Trabajo</a>
+        <a href="../navegacion/contacto.html" id="nav">Contacto</a>
 </nav>
 <main id="main">
 <div class="arts">
@@ -63,10 +63,10 @@
 </aside>
 <footer id="pie">
         <div class="fut">
-        <a href="" class="futa"> <img src="../Recursos gr/IGICON.png" alt="IG" class="imgfut"></a> 
-        <a href="" class="futa"> <img src="../Recursos gr/TWICON.png" alt="TW" class="imgfut"></a> 
-        <a href="" class="futa"> <img src="../Recursos gr/LINKICON.png" alt="LINK" class="imgfut"></a> 
-        <a href="" class="futa"> <img src="../Recursos gr/WPICON.png" alt="WPP" class="imgfut"></a>
+        <a href="" class="futa"> <img src="../recursos/igicon.png" alt="IG" class="imgfut"></a> 
+        <a href="" class="futa"> <img src="../recursos/twicon.png" alt="TW" class="imgfut"></a> 
+        <a href="" class="futa"> <img src="../recursos/licon.png" alt="LINK" class="imgfut"></a> 
+        <a href="" class="futa"> <img src="../recursos/wpicon.png" alt="WPP" class="imgfut"></a>
         </div>
         <h4 class="rih"> © Groweb | Todos los derechos reservados </h4>
     </footer>
