--- a/navegacion/quienesSomos.html
+++ b/navegacion/quienesSomos.html
@@ -12,10 +12,10 @@
     <div id="conten">
     <nav id="nave">
         <a href="../index.html" id="nav">Home</a>
-        <a href="Servicios.html" id="nav">Servicios</a>
-        <a href="QuienesSomos.html" id="nav">Quienes Somos</a>
-        <a href="NuestroTrabajo.html" id="nav">Nuestro Trabajo</a>
-        <a href="Contacto.html" id="nav">Contacto</a>
+        <a href="../navegacion/servicios.html" id="nav">Servicios</a>
+        <a href="../navegacion/quienesSomos.html" id="nav">Quienes Somos</a>
+        <a href="../navegacion/nuestroTrabajo.html" id="nav">Nuestro Trabajo</a>
+        <a href="../navegacion/contacto.html" id="nav">Contacto</a>
 </nav>
 <main class="main">
 
