correcion en la nav

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 <body>
 <div id="conten">
     <nav id="nave">
-            <a href="../Repositorio/index.html" id="nav">Home</a>
-            <a href="../Repositorio/navegacion/servicios.html" id="nav">Servicios</a>
-            <a href="../Repositorio/navegacion/quienesSomos.html" id="nav">Quienes Somos</a>
-            <a href="../Repositorio/navegacion/nuestroTrabajo.html" id="nav">Nuestro Trabajo</a>
-            <a href="../Repositorio/navegacion/contacto.html" id="nav">Contacto</a>
+            <a href="./index.html" id="nav">Home</a>
+            <a href="./navegacion/servicios.html" id="nav">Servicios</a>
+            <a href="./navegacion/quienesSomos.html" id="nav">Quienes Somos</a>
+            <a href="./navegacion/nuestroTrabajo.html" id="nav">Nuestro Trabajo</a>
+            <a href="./navegacion/contacto.html" id="nav">Contacto</a>
     </nav>
     <main id="main">
 <section class="logo">
