--- a/navegacion/quienesSomos.html
+++ b/navegacion/quienesSomos.html
@@ -11,21 +11,21 @@
 <body>
     <div id="conten">
     <nav id="nave">
-        <a href="../index.html" id="nav">Home</a>
-        <a href="../navegacion/servicios.html" id="nav">Servicios</a>
-        <a href="../navegacion/quienesSomos.html" id="nav">Quienes Somos</a>
-        <a href="../navegacion/nuestroTrabajo.html" id="nav">Nuestro Trabajo</a>
-        <a href="../navegacion/contacto.html" id="nav">Contacto</a>
+        <a href="./index.html" id="nav">Home</a>
+        <a href="./navegacion/servicios.html" id="nav">Servicios</a>
+        <a href="./navegacion/quienesSomos.html" id="nav">Quienes Somos</a>
+        <a href="./navegacion/nuestroTrabajo.html" id="nav">Nuestro Trabajo</a>
+        <a href="./navegacion/contacto.html" id="nav">Contacto</a>
 </nav>
 <main class="main">
 
 </main>
 <footer id="pie">
     <div class="fut">
-    <a href="" class="futa"> <img src="../recursos/igicon.png ." alt="IG" class="imgfut"></a> 
-    <a href="" class="futa"> <img src="../recursos/twicon.png ." alt="TW" class="imgfut"></a> 
-    <a href="" class="futa"> <img src="../recursos/licon.png ." alt="LINK" class="imgfut"></a> 
-    <a href="" class="futa"> <img src="../recursos/wpicon.png" alt="WPP" class="imgfut"></a>
+    <a href="" class="futa"> <img src="./recursos/igicon.png ." alt="IG" class="imgfut"></a> 
+    <a href="" class="futa"> <img src="./recursos/twicon.png ." alt="TW" class="imgfut"></a> 
+    <a href="" class="futa"> <img src="./recursos/licon.png ." alt="LINK" class="imgfut"></a> 
+    <a href="" class="futa"> <img src="./recursos/wpicon.png" alt="WPP" class="imgfut"></a>
     </div>
     <h4 class="rih"> © Groweb | Todos los derechos reservados </h4>
 </footer>
