--- a/navegacion/servicios.html
+++ b/navegacion/servicios.html
@@ -11,11 +11,11 @@
 <body>
 <div id="conten">
 <nav id="nave">
-        <a href="./index.html" id="nav">Home</a>
-        <a href="./navegacion/servicios.html" id="nav">Servicios</a>
-        <a href="./navegacion/quienesSomos.html" id="nav">Quienes Somos</a>
-        <a href="./navegacion/nuestroTrabajo.html" id="nav">Nuestro Trabajo</a>
-        <a href="./navegacion/contacto.html" id="nav">Contacto</a>
+        <a href="../index.html" id="nav">Home</a>
+        <a href="./servicios.html" id="nav">Servicios</a>
+        <a href="./quienesSomos.html" id="nav">Quienes Somos</a>
+        <a href="./nuestroTrabajo.html" id="nav">Nuestro Trabajo</a>
+        <a href="./contacto.html" id="nav">Contacto</a>
 </nav>
 <main id="main">
 <div class="arts">
