cambios de nuevo

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </nav>
     <main id="main">
 <section class="logo">
-    <img src="../Repositorio/recursos/logofinal.svg" alt="Logo">
+    <img src="./recursos/logofinal.svg" alt="Logo">
 </section>
 <header class="l1">
     <h1> Desarrollo Web </h1> 
