--- a/navegacion/quienesSomos.html
+++ b/navegacion/quienesSomos.html
@@ -12,10 +12,10 @@
 <div id="conten">
         <nav id="nave">
             <a href="../index.html" id="nav">Home</a>
-            <a href="./servicios.html" id="nav">Servicios</a>
-            <a href="./quienesSomos.html" id="nav">Quienes Somos</a>
-            <a href="./nuestroTrabajo.html" id="nav">Nuestro Trabajo</a>
-            <a href="./contacto.html" id="nav">Contacto</a>
+            <a href="servicios.html" id="nav">Servicios</a>
+            <a href="quienesSomos.html" id="nav">Quienes Somos</a>
+            <a href="nuestroTrabajo.html" id="nav">Nuestro Trabajo</a>
+            <a href="contacto.html" id="nav">Contacto</a>
     </nav>
 <main class="main">
 
