arreglando gut e img

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Groweb | Desarrollamos tu web</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="../Repositorio/recursos/logofinal.svg">
+    <link rel="shortcut icon" href="./recursos/logofinal.svg">
 </head>
 <body>
 <div id="conten">
@@ -31,7 +31,7 @@
 <div class="sec1">  
     <h2> Nuestro enfoque</h2> 
 <section>
-    <img class="ilus2" src="../Repositorio/recursos/ilust2.svg" alt="ilustraciones diseño">
+    <img class="ilus2" src="./recursos/ilust2.svg" alt="ilustraciones diseño">
 </section>
 <section class="ilusmar">
     <article class="ilust">    
@@ -58,10 +58,10 @@
 </div>
     <footer id="pie">
         <div class="fut">
-        <a href="" class="futa"> <img src="../Repositorio/recursos/igicon.png" alt="IG" class="imgfut"></a> 
-        <a href="" class="futa"> <img src="../Repositorio/recursos/igicon.png" alt="TW" class="imgfut"></a> 
-        <a href="" class="futa"> <img src="../Repositorio/recursos/licon.png" alt="LINK" class="imgfut"></a> 
-        <a href="" class="futa"> <img src="../Repositorio/recursos/wpicon.png" alt="WPP" class="imgfut"></a>
+        <a href="" class="futa"> <img src="./recursos/igicon.png" alt="IG" class="imgfut"></a> 
+        <a href="" class="futa"> <img src="./recursos/igicon.png" alt="TW" class="imgfut"></a> 
+        <a href="" class="futa"> <img src="./recursos/licon.png" alt="LINK" class="imgfut"></a> 
+        <a href="" class="futa"> <img src="./recursos/wpicon.png" alt="WPP" class="imgfut"></a>
         </div>
         <h4 class="rih"> © Groweb | Todos los derechos reservados </h4>
     </footer>
