arreglando gut e img2

--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
 </div>
     </main>
     <div class="aside1">
-        <section class="fle"><img width="20px" src="../Repositorio/recursos/flecha-hacia-abajo-para-navegar.svg" alt="desplazamiento"></section>
+        <section class="fle"><img width="20px" src="./recursos/flecha-hacia-abajo-para-navegar.svg" alt="desplazamiento"></section>
 </div>
     <footer id="pie">
         <div class="fut">
         <a href="" class="futa"> <img src="./recursos/igicon.png" alt="IG" class="imgfut"></a> 
-        <a href="" class="futa"> <img src="./recursos/igicon.png" alt="TW" class="imgfut"></a> 
+        <a href="" class="futa"> <img src="./recursos/twicon.png" alt="TW" class="imgfut"></a> 
         <a href="" class="futa"> <img src="./recursos/licon.png" alt="LINK" class="imgfut"></a> 
         <a href="" class="futa"> <img src="./recursos/wpicon.png" alt="WPP" class="imgfut"></a>
         </div>
