--- a/navegacion/contacto.html
+++ b/navegacion/contacto.html
@@ -52,11 +52,11 @@
 </main>
 <footer id="pie">
     <div class="fut">
-    <a href="" class="futa"> <img src="./recursos/igicon.png" alt="IG" class="imgfut"></a> 
-    <a href="" class="futa"> <img src="./recursos/twicon.png" alt="TW" class="imgfut"></a> 
-    <a href="" class="futa"> <img src="./recursos/licon.png" alt="LINK" class="imgfut"></a> 
-    <a href="" class="futa"> <img src="./recursos/wpicon.png" alt="WPP" class="imgfut"></a>
-    </div>
+        <a href="" class="futa"> <img src="../recursos/igicon.png" alt="IG" class="imgfut"></a> 
+        <a href="" class="futa"> <img src="../recursos/twicon.png" alt="TW" class="imgfut"></a> 
+        <a href="" class="futa"> <img src="../recursos/licon.png" alt="LINK" class="imgfut"></a> 
+        <a href="" class="futa"> <img src="../recursos/wpicon.png" alt="WPP" class="imgfut"></a>
+        </div>
     <h4 class="rih"> © Groweb | Todos los derechos reservados </h4>
 </footer>
 </div>
