--- a/navegacion/servicios.html
+++ b/navegacion/servicios.html
@@ -63,10 +63,10 @@
 </aside>
 <footer id="pie">
         <div class="fut">
-        <a href="" class="futa"> <img src="igicon.png" alt="IG" class="imgfut"></a> 
-        <a href="" class="futa"> <img src="twicon.png" alt="TW" class="imgfut"></a> 
-        <a href="" class="futa"> <img src="licon.png" alt="LINK" class="imgfut"></a> 
-        <a href="" class="futa"> <img src="wpicon.png" alt="WPP" class="imgfut"></a>
+        <a href="" class="futa"> <img src="../recursos/igicon.png" alt="IG" class="imgfut"></a> 
+        <a href="" class="futa"> <img src="../recursos/twicon.png" alt="TW" class="imgfut"></a> 
+        <a href="" class="futa"> <img src="../recursos/licon.png" alt="LINK" class="imgfut"></a> 
+        <a href="" class="futa"> <img src="../recursos/wpicon.png" alt="WPP" class="imgfut"></a>
         </div>
         <h4 class="rih"> © Groweb | Todos los derechos reservados </h4>
     </footer>
