--- a/navegacion/nuestroTrabajo.html
+++ b/navegacion/nuestroTrabajo.html
@@ -38,7 +38,7 @@
 
     <section class="hnt">
         <h3> Siempre estamos abiertos a nuevos proyectos.</h3>
-        <a class="hnta" href="../navegacion/desarrolloExpress.html">¡Contactanos!</a>
+        <a class="hnta" href="./contacto.html">¡Contactanos!</a>
     </section>
 </main>
 <footer id="pie">
