--- a/navegacion/nuestroTrabajo.html
+++ b/navegacion/nuestroTrabajo.html
@@ -37,7 +37,7 @@
     </div>
 
     <section class="hnt">
-        <h3> Siempre estamos abiertos a nuevos proyectos.</h3>
+        <h3> En groweb estamos siempre abiertos a nuevos proyectos...</h3>
         <a class="hnta" href="./contacto.html">¡Contactanos!</a>
     </section>
 </main>
