--- a/navegacion/quienesSomos.html
+++ b/navegacion/quienesSomos.html
@@ -9,7 +9,6 @@
     <link rel="shortcut icon" href="../recursos/logofinal.svg">
 </head>
 <body>
-<div id="conten">
         <nav id="nave">
             <a href="../index.html" id="nav">Home</a>
             <a href="servicios.html" id="nav">Servicios</a>
@@ -17,7 +16,63 @@
             <a href="nuestroTrabajo.html" id="nav">Nuestro Trabajo</a>
             <a href="contacto.html" id="nav">Contacto</a>
 </nav>
-<main class="main">
+<main>
+<header class="qshed">
+    <h2>
+        Excelencia en el diseño, practicidad en el código.
+    </h2>
+    <p>Nos enamoramos del problema. <br>
+        Soluciones existen muchas, van y vienen, quedan obsoletas o sencillamente no son practicas. 
+        Por eso decidimos enfocar nuestra atencion en cada problematica planteada para abordarla desde la mejor y mas completa solucion. 
+        Groweb surge de la necesidad de acercar al publico aquellas herramientas indispensables para que aquello que tienen para decir tenga el alcance que se merece.
+        <br> Somos un equipo de ovenes jentusiastas, en constante formacion y con ideas innovadoras. </p>
+</header>
+<section>
+    <img class="imgmc" src="/recursos/mockup.jpg" alt="">
+</section>
+        <h2 class="hed">
+            Nuestra identidad es contagiosa. <br>
+            ¡Te la compartimos!
+        </h2>
+
+<div class="displ">
+        <article class="pr">
+        <img class="merch" src="/recursos/reme.jpg" alt="aa">
+        <h3> Remera blanca Groweb </h3>
+    </article>
+        <article class="pr">
+        <img class="merch" src="/recursos/reme.jpg" alt="aa">
+    <h3> Remera blanca Groweb </h3>   
+    </article>
+        <article class="pr">
+        <img class="merch" src="/recursos/reme.jpg" alt="aa">
+    <h3> Remera blanca Groweb </h3>  
+    </article>
+        <article class="pr">
+        <img class="merch" src="/recursos/reme.jpg" alt="aa">
+    <h3> Remera blanca Groweb </h3>    
+    </article>
+    <article class="pr">
+        <img class="merch" src="/recursos/reme.jpg" alt="aa">
+    <h3> Remera blanca Groweb </h3>    
+    </article>
+    <article class="pr">
+        <img class="merch" src="/recursos/reme.jpg" alt="aa">
+    <h3> Remera blanca Groweb </h3>    
+    </article>
+    <article class="pr">
+        <img class="merch" src="/recursos/reme.jpg" alt="aa">
+    <h3> Remera blanca Groweb </h3>    
+    </article>
+    <article class="pr">
+        <img class="merch" src="/recursos/reme.jpg" alt="aa">
+    <h3> Remera blanca Groweb </h3>    
+    </article>
+    <article class="pr">
+        <img class="merch" src="/recursos/reme.jpg" alt="aa">
+    <h3> Remera blanca Groweb </h3>    
+    </article>
+</div>
 
 </main>
 <footer id="pie">
