--- a/navegacion/quienesSomos.html
+++ b/navegacion/quienesSomos.html
@@ -16,7 +16,7 @@
             <a href="nuestroTrabajo.html" id="nav">Nuestro Trabajo</a>
             <a href="contacto.html" id="nav">Contacto</a>
 </nav>
-<main>
+<main class="cc">
 <header class="qshed">
     <h2>
         Excelencia en el diseño, practicidad en el código.
@@ -38,39 +38,48 @@
 <div class="displ">
         <article class="pr">
         <img class="merch" src="/recursos/reme.jpg" alt="aa">
-        <h3> Remera blanca Groweb </h3>
+    <h3> Remera blanca Groweb </h3>
+    <p> $5000</p>
     </article>
         <article class="pr">
         <img class="merch" src="/recursos/reme.jpg" alt="aa">
-    <h3> Remera blanca Groweb </h3>   
+    <h3> Remera blanca Groweb </h3>
+    <p> $5000</p>   
     </article>
         <article class="pr">
         <img class="merch" src="/recursos/reme.jpg" alt="aa">
-    <h3> Remera blanca Groweb </h3>  
+    <h3> Remera blanca Groweb </h3>
+    <p> $5000</p>  
     </article>
         <article class="pr">
         <img class="merch" src="/recursos/reme.jpg" alt="aa">
-    <h3> Remera blanca Groweb </h3>    
+    <h3> Remera blanca Groweb </h3>
+    <p> $5000</p>    
     </article>
     <article class="pr">
         <img class="merch" src="/recursos/reme.jpg" alt="aa">
-    <h3> Remera blanca Groweb </h3>    
+    <h3> Remera blanca Groweb </h3>
+    <p> $5000</p>    
     </article>
     <article class="pr">
         <img class="merch" src="/recursos/reme.jpg" alt="aa">
-    <h3> Remera blanca Groweb </h3>    
+    <h3> Remera blanca Groweb </h3>
+    <p> $5000</p>    
     </article>
     <article class="pr">
         <img class="merch" src="/recursos/reme.jpg" alt="aa">
-    <h3> Remera blanca Groweb </h3>    
+    <h3> Remera blanca Groweb </h3>
+    <p> $5000</p>    
     </article>
     <article class="pr">
         <img class="merch" src="/recursos/reme.jpg" alt="aa">
-    <h3> Remera blanca Groweb </h3>    
+    <h3> Remera blanca Groweb </h3>
+    <p> $5000</p>    
     </article>
     <article class="pr">
         <img class="merch" src="/recursos/reme.jpg" alt="aa">
-    <h3> Remera blanca Groweb </h3>    
+    <h3> Remera blanca Groweb </h3>
+    <p> $5000</p>    
     </article>
 </div>
 
