--- a/navegacion/quienesSomos.html
+++ b/navegacion/quienesSomos.html
@@ -28,7 +28,7 @@
         <br> Somos un equipo de ovenes jentusiastas, en constante formacion y con ideas innovadoras. </p>
 </header>
 <section>
-    <img class="imgmc" src="/recursos/mockup.jpg" alt="">
+    <img class="imgmc" src="/recursos/mockup.svg" alt="">
 </section>
         <h2 class="hed">
             Nuestra identidad es contagiosa. <br>
@@ -37,47 +37,47 @@
 
 <div class="displ">
         <article class="pr">
-        <img class="merch" src="/recursos/reme.jpg" alt="aa">
+        <img class="merch" src="/recursos/reme.svg" alt="aa">
     <h3> Remera blanca Groweb </h3>
     <p> $5000</p>
     </article>
         <article class="pr">
-        <img class="merch" src="/recursos/reme.jpg" alt="aa">
+        <img class="merch" src="/recursos/reme.svg" alt="aa">
     <h3> Remera blanca Groweb </h3>
     <p> $5000</p>   
     </article>
         <article class="pr">
-        <img class="merch" src="/recursos/reme.jpg" alt="aa">
+        <img class="merch" src="/recursos/reme.svg" alt="aa">
     <h3> Remera blanca Groweb </h3>
     <p> $5000</p>  
     </article>
         <article class="pr">
-        <img class="merch" src="/recursos/reme.jpg" alt="aa">
+        <img class="merch" src="/recursos/reme.svg" alt="aa">
     <h3> Remera blanca Groweb </h3>
     <p> $5000</p>    
     </article>
     <article class="pr">
-        <img class="merch" src="/recursos/reme.jpg" alt="aa">
+        <img class="merch" src="/recursos/reme.svg" alt="aa">
     <h3> Remera blanca Groweb </h3>
     <p> $5000</p>    
     </article>
     <article class="pr">
-        <img class="merch" src="/recursos/reme.jpg" alt="aa">
+        <img class="merch" src="/recursos/reme.svg" alt="aa">
     <h3> Remera blanca Groweb </h3>
     <p> $5000</p>    
     </article>
     <article class="pr">
-        <img class="merch" src="/recursos/reme.jpg" alt="aa">
+        <img class="merch" src="/recursos/reme.svg" alt="aa">
     <h3> Remera blanca Groweb </h3>
     <p> $5000</p>    
     </article>
     <article class="pr">
-        <img class="merch" src="/recursos/reme.jpg" alt="aa">
+        <img class="merch" src="/recursos/reme.svg" alt="aa">
     <h3> Remera blanca Groweb </h3>
     <p> $5000</p>    
     </article>
     <article class="pr">
-        <img class="merch" src="/recursos/reme.jpg" alt="aa">
+        <img class="merch" src="/recursos/reme.svg" alt="aa">
     <h3> Remera blanca Groweb </h3>
     <p> $5000</p>    
     </article>
