--- a/navegacion/desarrolloExpress.html
+++ b/navegacion/desarrolloExpress.html
@@ -7,7 +7,7 @@
     <title> Desarrollo Express </title>
     <link rel="stylesheet" href="../style.css">
 </head>
-<body>
+<body id="body">
 <div id="conten">
     <nav id="nave">
         <a href="../index.html" id="nav">Home</a>
