--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <title>Groweb | Desarrollamos tu web</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="./recursos/logofinal.svg">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
-<body>
+<body id="body">
 <div id="conten">
     <nav id="nave">
             <a href="./index.html" id="nav">Home</a>
@@ -28,6 +29,29 @@
         <h2> ¿Estás buscando un buen diseño para tu página web? </h2>
 </section>
 <hr>
+<!--sacado de boots-->
+<div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active" data-bs-interval="10000">
+        <img src="../Repositorio/recursos/mockup.jpg" class="d-block w-100" alt="Geoweb">
+      </div>
+      <div class="carousel-item" data-bs-interval="2000">
+        <img src="../Repositorio/recursos/papel1maschikito.jpg" class="d-block w-100" alt="mockup">
+      </div>
+      <div class="carousel-item">
+        <img src="../Repositorio/recursos/ilust2.svg" class="d-block w-100" alt="solo prueba">
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
+<!--sacado de boots-->
 <div class="sec1">  
     <h2> Nuestro enfoque</h2> 
 <section>
