--- a/navegacion/quienesSomos.html
+++ b/navegacion/quienesSomos.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../style.css">
     <link rel="shortcut icon" href="../recursos/logofinal.svg">
 </head>
-<body>
+<body id="body">
         <nav id="nave">
             <a href="../index.html" id="nav">Home</a>
             <a href="servicios.html" id="nav">Servicios</a>
@@ -37,47 +37,47 @@
 
 <div class="displ">
         <article class="pr">
-        <img class="merch" src="/recursos/reme.jpg" alt="aa">
+        <img class="merch" src="../recursos/reme.jpg" alt="aa">
     <h3> Remera blanca Groweb </h3>
     <p> $5000</p>
     </article>
         <article class="pr">
-        <img class="merch" src="/recursos/reme.jpg" alt="aa">
+        <img class="merch" src="../recursos/reme.jpg" alt="aa">
     <h3> Remera blanca Groweb </h3>
     <p> $5000</p>   
     </article>
         <article class="pr">
-        <img class="merch" src="/recursos/reme.jpg" alt="aa">
+        <img class="merch" src="../recursos/reme.jpg" alt="aa">
     <h3> Remera blanca Groweb </h3>
     <p> $5000</p>  
     </article>
         <article class="pr">
-        <img class="merch" src="/recursos/reme.jpg" alt="aa">
+        <img class="merch" src="../recursos/reme.jpg" alt="aa">
     <h3> Remera blanca Groweb </h3>
     <p> $5000</p>    
     </article>
     <article class="pr">
-        <img class="merch" src="/recursos/reme.jpg" alt="aa">
+        <img class="merch" src="../recursos/reme.jpg" alt="aa">
     <h3> Remera blanca Groweb </h3>
     <p> $5000</p>    
     </article>
     <article class="pr">
-        <img class="merch" src="/recursos/reme.jpg" alt="aa">
+        <img class="merch" src="../recursos/reme.jpg" alt="aa">
     <h3> Remera blanca Groweb </h3>
     <p> $5000</p>    
     </article>
     <article class="pr">
-        <img class="merch" src="/recursos/reme.jpg" alt="aa">
+        <img class="merch" src="../recursos/reme.jpg" alt="aa">
     <h3> Remera blanca Groweb </h3>
     <p> $5000</p>    
     </article>
     <article class="pr">
-        <img class="merch" src="/recursos/reme.jpg" alt="aa">
+        <img class="merch" src="../recursos/reme.jpg" alt="aa">
     <h3> Remera blanca Groweb </h3>
     <p> $5000</p>    
     </article>
     <article class="pr">
-        <img class="merch" src="/recursos/reme.jpg" alt="aa">
+        <img class="merch" src="../recursos/reme.jpg" alt="aa">
     <h3> Remera blanca Groweb </h3>
     <p> $5000</p>    
     </article>
