--- a/navegacion/servicios.html
+++ b/navegacion/servicios.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../style.css">
     <link rel="shortcut icon" href="../recursos/logofinal.svg">
 </head>
-<body>
+<body id="body">
 <div id="conten">
 <nav id="nave">
         <a href="../index.html" id="nav">Home</a>
