--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
 <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active" data-bs-interval="10000">
-        <img src="/recursos/mockup.jpg" class="d-block w-100" alt="Geoweb">
+        <img src="./recursos/ilust.jpg" class="d-block w-100" alt="Geoweb">
       </div>
       <div class="carousel-item" data-bs-interval="2000">
-        <img src="/recursos/papel1maschikito.jpg" class="d-block w-100" alt="mockup">
+        <img src="./recursos/papel1maschikito.jpg" class="d-block w-100" alt="mockup">
       </div>
       <div class="carousel-item">
-        <img src="/recursos/ilust2.svg" class="d-block w-100" alt="solo prueba">
+        <img src="./recursos/ilust2.svg" class="d-block w-100" alt="solo prueba">
       </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
