--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 <body id="body">
 <div id="conten">
     <nav id="nave">
-            <a href="./index.html" id="nav">Home</a>
-            <a href="./navegacion/servicios.html" id="nav">Servicios</a>
-            <a href="./navegacion/quienesSomos.html" id="nav">Quienes Somos</a>
-            <a href="./navegacion/nuestroTrabajo.html" id="nav">Nuestro Trabajo</a>
-            <a href="./navegacion/contacto.html" id="nav">Contacto</a>
+            <a style="text-decoration: none" href="./index.html" id="nav">Home</a>
+            <a style="text-decoration: none" href="./navegacion/servicios.html" id="nav">Servicios</a>
+            <a style="text-decoration: none" href="./navegacion/quienesSomos.html" id="nav">Quienes Somos</a>
+            <a style="text-decoration: none" href="./navegacion/nuestroTrabajo.html" id="nav">Nuestro Trabajo</a>
+            <a style="text-decoration: none" href="./navegacion/contacto.html" id="nav">Contacto</a>
     </nav>
     <main id="main">
 <section class="logo">
