esta rama tiene animaciones horribles

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     </nav>
     <main id="main">
 <section class="logo">
-    <img src="./recursos/logofinal.svg" alt="Logo">
+    <img src="./recursos/logofinal.svg" alt="Logo" class="slide-fwd-center">
 </section>
-<header class="l1">
+<header id="l1">
     <h1> Desarrollo Web </h1> 
 </header>
 <section class="l2">
