--- a/navegacion/servicios.html
+++ b/navegacion/servicios.html
@@ -35,7 +35,7 @@
         y para que puedas prestarnos tu ojo en todo momento.
         Mockups avanzados para que tengas una buena idea de nuestra visión.
         </p>
-        <button class="bt"> 
+        <button id="bt"> 
                 <a href="./desarrolloExpress.html">Saber mas!</a>
         </button>
 </section>
@@ -47,7 +47,7 @@
         sitio solido, completo, funcional y llamativo en los 
         mejores plazos que podemos ofrecer.
         </p>
-        <button class="bt">
+        <button id="bt">
         <a href="./desarrolloExpress.html">Saber mas!</a>
         </button>
 </aside>
@@ -59,7 +59,7 @@
         su diseño a tus nuevos enfoques. Con Groweb tu sitio todavia puede dar 
         batalla.        
         </p>
-        <button class="bt">
+        <button id="bt">
                 <a href="./desarrolloExpress.html">Saber mas!</a>
         </button>
 </aside>
