--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </nav>
     <main id="main">
 <section class="logo">
-    <img src="./recursos/logofinal.svg" alt="Logo" class="slide-fwd-center">
+    <img src="./recursos/logofinal.svg" alt="Logo">
 </section>
 <header id="l1">
     <h1> Desarrollo Web </h1> 
