--- a/navegacion/nuestroTrabajo.html
+++ b/navegacion/nuestroTrabajo.html
@@ -7,33 +7,73 @@
     <title>Nuestro trabajo | Groweb | Desarrollamos tu web</title>
     <link rel="stylesheet" href="../style.css">
     <link rel="shortcut icon" href="../recursos/logofinal.svg">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body id="body">
 <div id="conten">
     <nav id="nave">
-        <a href="../index.html" id="nav">Home</a>
-        <a href="servicios.html" id="nav">Servicios</a>
-        <a href="quienesSomos.html" id="nav">Quienes Somos</a>
-        <a href="nuestroTrabajo.html" id="nav">Nuestro Trabajo</a>
-        <a href="contacto.html" id="nav">Contacto</a>
+        <a style="text-decoration: none" href="../index.html" id="nav">Home</a>
+        <a style="text-decoration: none" href="servicios.html" id="nav">Servicios</a>
+        <a style="text-decoration: none" href="quienesSomos.html" id="nav">Quienes Somos</a>
+        <a style="text-decoration: none" href="nuestroTrabajo.html" id="nav">Nuestro Trabajo</a>
+        <a style="text-decoration: none" href="contacto.html" id="nav">Contacto</a>
 </nav>
 <main id="main">
     <section class="hnt">    
-    <h3>
+    <h3 id="boldh3">
     El crecimiento de tu empresa es el exito de la nuestra.
     </h3>
     <p> Dejamos que nuestro trabajo hable por nosotros.</p>
     </section>
-    <div class="clientes">
-        <a href="" class="cli">EMPRESA EJ 1</a>
-        <a href="" class="cli">EMPRESA EJ 2</a>
-        <a href="" class="cli">EMPRESA EJ 3</a>
-        <a href="" class="cli">EMPRESA EJ 4</a>
-        <a href="" class="cli">EMPRESA EJ 5</a>
-        <a href="" class="cli">EMPRESA EJ 6</a>
-        <a href="" class="cli">EMPRESA EJ 7</a>
-        <a href="" class="cli">EMPRESA EJ 8</a>
-        <a href="" class="cli">EMPRESA EJ 9</a>
+    <div id="clientes">
+        <div class="sep" class="card" style="width: 18rem;">
+            <img src="../recursos/1.jpg" class="cardtm" alt="Coca Cola logo">
+            <div class="card-body">
+              <h5 class="caardt" class="card-title">Coca-Cola</h5>
+              <p class="card-text">Desarrollamos diversos componentes en conjunto con la empresa.</p>
+              <a href="#" class="cbe">Visitar</a>
+            </div>
+          </div>
+          <div class="sep" class="card" style="width: 18rem;">
+            <img src="../recursos/2.jpg" class="cardtm" alt="Corsair logo">
+            <div class="card-body">
+              <h5 class="caardt" class="card-title">Corsair</h5>
+              <p class="card-text">Trabajamos en conjunto con Corsair para asegurar su liderazgo en el mercado.</p>
+              <a href="#" class="cbe">Visitar</a>
+            </div>
+          </div>
+          <div class="sep" class="card" style="width: 18rem;">
+            <img src="../recursos/3.jpg" class="cardtm" alt="Timberland">
+            <div class="card-body">
+              <h5 class="caardt" class="card-title">Timberland</h5>
+              <p class="card-text">Pudimos trabajar en conjunto con Timberland rehaciendo su web desde cero.</p>
+              <a href="#" class="cbe">Visitar</a>
+            </div>
+          </div>
+          <div class="sep" class="card" style="width: 18rem;">
+            <img src="../recursos/4.jpg" class="cardtm" alt="Lacoste logo">
+            <div class="card-body">
+              <h5 class="caardt" class="card-title">Lacoste</h5>
+              <p class="card-text">Nos divertimos mucho buscando soluciones en conjunto para las tiendas de Lacoste.</p>
+              <a href="#" class="cbe">Visitar</a>
+            </div>
+          </div>
+          <div class="sep" class="card" style="width: 18rem;">
+            <img src="../recursos/5.jpg" class="cardtm" alt="Paypal logo">
+            <div class="card-body">
+              <h5 class="caardt" class="card-title">Paypal</h5>
+              <p class="card-text">El equipo de Paypal nos delegó el desarrollo de la version mobile de su sitio.</p>
+              <a href="#" class="cbe">Visitar</a>
+            </div>
+          </div>
+          <div class="sep" class="card" style="width: 18rem;">
+            <img src="../recursos/6.jpg" class="cardtm" alt="Versace logo">
+            <div class="card-body">
+              <h5 class="caardt" class="card-title">Versace</h5>
+              <p class="card-text">Diseñamos una web deslumbrante y elegante, a la altura del gran Versace.</p>
+              <a href="#" class="cbe">Visitar</a>
+            </div>
+          </div>
     </div>
 
     <section class="hnt">
