--- a/navegacion/contacto.html
+++ b/navegacion/contacto.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../style.css">
     <link rel="shortcut icon" href="../Recursos gr/GROWEB---TAB.jpg">
 </head>
-<body id="body" class="block">
+<body id="body">
 <div id="conten">
     <nav id="nave">
         <a href="../index.html" id="nav">Home</a>
